	    make use of system default paths like conda and brew.
	  - Changed CLI:
	    * Added -X, --default-xml to find the installations default XM
	      file
	    * Replaced -h for -H, to obtain the hairpin size and -h has
	      become the equivalent of --help
	    * Improved layout of --help
	    * Solved a bug in parsing -t
	    * Updated corresponding test-cases + new one for -X

2017-02-20  Youri Hoogstrate
	* v1.6.8
	  - OS X compilation compatibility, several travis and compilation
	    fixes and cleanups and made a function static. Also fixed
	    behaviour that differed between DEBUG and RELEASE builts.

2017-02-16  Youri Hoogstrate
	* v1.6.7
	  - Replaces <array> include for <vector> for compatible with libc++
	    rather than only libstdc++

2016-09-07  Youri Hoogstrate
	* v1.6.6
	  - Minor updates to the test suite

2016-05-18  Youri Hoogstrate
	* v1.6.5
	  - Fixes lack of unsetting a pointer when a WM loop overwrites
	    a Segment(Loop) in the V() function - solves issue 46

2016-03-31  Youri Hoogstrate
	* v1.6.4
	  - Fix in both utils when sequences with weird chars are being parsed

2016-03-09  Youri Hoogstrate
	* v1.6.3
	  - Minor speed improvements and cleaner code

2016-03-01  Youri Hoogstrate
	* v1.6.2
	  - Fixes defining max value of a float for certain compilers/CPUs
	  - Solved two memory errors for SegmentLoop objects

2016-02-29  Youri Hoogstrate
	* v1.6.1
	  - Lower memory footprint for traceback matrices

2016-02-29  Youri Hoogstrate
	* v1.6.0
	  - Many changes in the way of dealing with multiloops, rewritten traceback
	    * This implementation allows traceback from any start point
	  - Additional test cases
	    * Functional tests comparing with results found with mfold/unafold/vienna
	  - Removal of @date tags because it's a pair to keep up to date and github has the blame functionality
	  - Stricter implementation of the c++11/c++14 standard
	  - PairingPlus can be initialized using only a Sequence and a Pair